objects/vlocity_cmt__ServicePoint__c.object
<CustomObject>
    <description>An entry point for services to a premises. The service provided to each service point is separately metered (or measured). Useful for fixed line services including energy and utility services.</description>
    <fields>
        <fullName>vlocity_cmt__ActivationDate__c</fullName>
        <label>Activation Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__AverageMonthlyUsage__c</fullName>
        <description>Average monthly usage for the service point</description>
        <label>Average Monthly Usage</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__FieldServiceClass__c</fullName>
        <description>Classification of field activity.</description>
        <label>Field Service Class</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Class A</fullName>
                </value>
                <value>
                    <fullName>Class B</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>vlocity_cmt__InstallationType__c</fullName>
        <description>Type of meter installation</description>
        <label>Installation Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>vlocity_cmt__IsKeyAtPremises__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates that a key is available at the premises to access the meter.</description>
        <label>Key at Premises</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__IsOkToEnter__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Indicates a field service rep has permission to enter the premises for meter read or other field activities</description>
        <label>Ok to Enter</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__IsPremisesInfoOverridden__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Indicates the details on the premises are overridden by the details on the service point.</description>
        <label>Override Premises Information</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__LoadProfile__c</fullName>
        <label>Load Profile</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Residential Low</fullName>
                </value>
                <value>
                    <fullName>Residential Med</fullName>
                </value>
                <value>
                    <fullName>Residential High</fullName>
                </value>
                <value>
                    <fullName>SMB Low</fullName>
                </value>
                <value>
                    <fullName>SMB Med</fullName>
                </value>
                <value>
                    <fullName>SMB High</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>vlocity_cmt__MarketIdentifier__c</fullName>
        <description>Market Identifier value from external system.</description>
        <externalId>true</externalId>
        <label>Market Identifier</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__MeterId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Meter</label>
        <referenceTo>vlocity_cmt__InventoryItem__c</referenceTo>
        <relationshipLabel>Service Points</relationshipLabel>
        <relationshipName>ServicePoints</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__MeterNumber__c</fullName>
        <description>Meter number from the backend system.</description>
        <externalId>true</externalId>
        <label>Meter Number</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__MeterReadHold__c</fullName>
        <description>Temporarily prevent meter reading for this service point</description>
        <label>Meter Read Hold</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Access Hold</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>vlocity_cmt__MeterReadInstructions__c</fullName>
        <description>Provides additional meter read instructions required to access difficult meters.</description>
        <label>Meter Read Instructions</label>
        <length>32786</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__MeterReadRoute__c</fullName>
        <description>Grouping of Meters so that meters in the same route are read together.</description>
        <label>Meter Read Cycle / Route</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>vlocity_cmt__MeterReadWarning__c</fullName>
        <description>Provides warnings to the meter reader.</description>
        <label>Meter Read Warning</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__MeterStatus__c</fullName>
        <description>Status of the meter.</description>
        <label>Meter Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Connected</fullName>
                </value>
                <value>
                    <fullName>Disconnected</fullName>
                </value>
                <value>
                    <fullName>Offline</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>vlocity_cmt__MeterType__c</fullName>
        <description>Type of meter installed at the Service Point.</description>
        <label>Meter Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Smart</fullName>
                    <label>Smart Meter</label>
                </value>
                <value>
                    <fullName>Standard</fullName>
                </value>
                <value>
                    <fullName>Prepaid</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>vlocity_cmt__OperationArea__c</fullName>
        <description>Groups service point within a field service operation territory/area.</description>
        <label>Operation Area</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>vlocity_cmt__PremisesId__c</fullName>
        <label>Premises</label>
        <referenceTo>vlocity_cmt__Premises__c</referenceTo>
        <relationshipLabel>Service Points</relationshipLabel>
        <relationshipName>ServicePoints</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__ServicePointNumber__c</fullName>
        <externalId>true</externalId>
        <label>Service Point Number</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__ServiceType__c</fullName>
        <label>Service Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Electricity</fullName>
                </value>
                <value>
                    <fullName>Gas</fullName>
                </value>
                <value>
                    <fullName>Water</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>vlocity_cmt__Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Connected</fullName>
                    <default>true</default>
                    <label>Connected</label>
                </value>
                <value>
                    <fullName>Vacant</fullName>
                </value>
                <value>
                    <fullName>Install in Progress</fullName>
                </value>
                <value>
                    <fullName>Inactive</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>vlocity_cmt__TemperatureArea__c</fullName>
        <description>Grouping of service points within a region with similar air temperatures</description>
        <label>Temperature Area</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__UtilityProvider__c</fullName>
        <description>Utility provider supplying service to the premises.</description>
        <label>Utility Provider</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>vlocity_cmt__VoltageLevel__c</fullName>
        <description>Level of voltage supplied to a service point through the installed electric meter</description>
        <label>Voltage Level</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Service Point</label>
    <listViews>
        <fullName>vlocity_cmt__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Service Point Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Service Points</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>